--- a/index-CV.html
+++ b/index-CV.html
@@ -4,19 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="简单写一手" />
-	<meta name="author" content="应崇彦" />
-	<meta name="mobile-web-app-capable" content="yes">
-    <title>Chongyan's Page</title>
+    <title>Bootstrap Portfolio Page Template</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
-	<link rel="shortcut icon" href="myname22.ico" />
-	<link rel="icon" href="myname22.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="myname22.ico" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><strong>Chongyan's Page</strong></a>
+      <a class="navbar-brand" href="#">Chongyan's Page</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,7 +20,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link" href="index-CV.html" target="_blank">Curriculum Vitae</a>
+            <a class="nav-link" href="XHTML1.0.html" target="_blank">Curriculum Vitae</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,15 +47,14 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
-  </nav>
+    </nav>
     <section>
       <div class="jumbotron text-center mt-2">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1>XXXXX标题</h1>
-              <p><strong>Latest progress in MXene based pseudocapacitor</strong><br/>
-              Incredible performance & unpredictable mechanism<br/></p>
+              <h1>Lorem ipsum dolor sit.</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, deleniti, ea nisi suscipit atque tempore aspernatur harum unde veritatis neque rem dolores assumenda. Recusandae facilis dolores cum iste assumenda accusamus.</p>
               <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
             </div>
           </div>
@@ -72,7 +65,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h1>Ph.D. Main Research Topics</h1>
+            <h1>Lorem ipsum dolor sit amet</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, magni, doloribus, possimus eum sapiente deleniti doloremque fugit ut expedita molestiae iusto debitis eveniet modi obcaecati ipsam quos quis labore dicta.</p>
           </div>
         </div>
@@ -84,10 +77,10 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img src="ele.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3 rounded">
+                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Electrochemistry</h5>
-                  Supercapacitor, pseudocapacitor, hybrid capacitor, .
+                  <h5 class="mt-0 mb-1">List-based media object</h5>
+                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
                 </div>
               </li>
             </ul>
@@ -95,10 +88,10 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img src="plasma.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
+                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Plasma</h5>
-                  Low temperature plasma, .
+                  <h5 class="mt-0 mb-1">List-based media object</h5>
+                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
                 </div>
               </li>
             </ul>
@@ -122,7 +115,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <h2>Latest Work</h2>
-            <p>selected progress in all fields!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, et, placeat !</p>
           </div>
         </div>
         <div class="row">
@@ -168,20 +161,20 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-12 col-xl-3">
+          <div class="col-md-4 col-12">
             <h3 class="text-center">WHO WE ARE</h3>
-            <p>Lorem ipsum dolor sit ame possimus consectetur dolores nihil labore quas eius illo accusamus nulla sed blanditiis porro accusantium. Perspiciatis, perferendis!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, ducimus, sit, quibusdam quidem recusandae veniam eos quod error nisi repellat excepturi laboriosam aspernatur suscipit possimus consectetur dolores nihil labore quas eius illo accusamus nulla sed blanditiis porro accusantium. Perspiciatis, perferendis!</p>
           </div>
-          <div class="col-md-4 col-12 col-xl-6">
+          <div class="col-md-4 col-12">
             <h3 class="text-center">GET IN TOUCH</h3>
             <address class="text-center">
-              <strong>State Key laboratory of Clean Energy Utilization<br/>Institute for Thermal Power Engineering<br/>College of Energy Engineering<br/><br/>Zhejiang University</strong><br>
-              38 Zheda Road, Hangzhou, Zhejiang Province 310027, China<br>
-              <br>
-              <abbr title="Phone">E-mail:</abbr> yingchongyan@zju.edu.cn
+              <strong>MyCompany, Inc.</strong><br>
+              Sunny Autumn Plaza, Grand Coulee,<br>
+              CA, 91308-4075, US<br>
+              <abbr title="Phone">P:</abbr> (123) 456-7890
             </address>
           </div>
-          <div class="col-md-4 col-12 col-xl-3">
+          <div class="col-md-4 col-12">
             <h3 class="text-center">NEWSLETTER</h3>
             <form>
               <div class="form-group col-12">
@@ -198,7 +191,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright. All rights reserved.</p>
+            <p>Copyright © MyCompany. All rights reserved.</p>
           </div>
         </div>
       </div>
