--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 	<meta name="description" content="简单写一手" />
 	<meta name="author" content="应崇彦" />
 	<meta name="mobile-web-app-capable" content="yes">
-    <title>Chongyan's Page</title>
+    <link rel="Bookmark" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	<title>Chongyan's Page</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
-	<link rel="shortcut icon" href="myname22.ico" />
-	<link rel="icon" href="myname22.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="myname22.ico" type="image/x-icon">
+	<!-- <link rel="shortcut icon" href="myname22.ico" />
+	     <link rel="icon" href="myname22.ico" type="image/x-icon">
+	     <link rel="shortcut icon" href="myname22.ico" type="image/x-icon"> -->
+	
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><strong>Chongyan's Page</strong></a>
+      <a class="navbar-brand" href="index.html"><strong>Chongyan's Page</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,11 +37,11 @@
             Research
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Electrochemistry</a>
+              <a class="dropdown-item" href="index-e.html">Electrochemistry</a>
 			  <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Plasma</a>
+              <a class="dropdown-item" href="index-p.html">Plasma</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Thermal management</a>
+              <a class="dropdown-item" href="index-t.html">Thermal management</a>
             </div>
           </li>
 		  <li class="nav-item">
@@ -56,13 +60,14 @@
   </nav>
     <section>
       <div class="jumbotron text-center mt-2">
+		<!--<img src="images/bck1.png" width="110%">-->  
         <div class="container">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12 offset-xl-1">
               <h1>XXXXX标题</h1>
-              <p><strong>Latest progress in MXene based pseudocapacitor</strong><br/>
+              <p><strong>Latest progress in MXene based pseudocapacitor in organic electrolyte</strong><br/>
               Incredible performance & unpredictable mechanism<br/></p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+              <p><a class="btn btn-primary btn-lg" href="#" role="button">More »</a></p>
             </div>
           </div>
         </div>
@@ -71,9 +76,9 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center offset-xl-1">
             <h1>Ph.D. Main Research Topics</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, magni, doloribus, possimus eum sapiente deleniti doloremque fugit ut expedita molestiae iusto debitis eveniet modi obcaecati ipsam quos quis labore dicta.</p>
+            <p>For some reasons, three main topics are under research during this period, including electrochemistry, low temperature plasma, interfacial heat transfer in thermal management.</p>
           </div>
         </div>
       </div>
@@ -87,7 +92,7 @@
                 <img src="ele.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3 rounded">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Electrochemistry</h5>
-                  Supercapacitor, pseudocapacitor, hybrid capacitor, .
+                  Supercapacitor, pseudocapacitor, hybrid capacitor, electrochemical analyze and electrode optimize.
                 </div>
               </li>
             </ul>
@@ -98,7 +103,7 @@
                 <img src="plasma.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
                 <div class="media-body">
                   <h5 class="mt-0 mb-1">Plasma</h5>
-                  Low temperature plasma, .
+                  Low temperature plasma, and plasma enhanced CVD.
                 </div>
               </li>
             </ul>
@@ -106,10 +111,10 @@
           <div class="col-md-4 col-12">
             <ul class="list-unstyled">
               <li class="media">
-                <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+                <img src="Flow.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">List-based media object</h5>
-                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
+                  <h5 class="mt-0 mb-1">Thermal management</h5>
+                  Interfacial heat transfer, finite element model, thermophysical test, thermal interfacial materials.
                 </div>
               </li>
             </ul>
@@ -120,11 +125,11 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center offset-xl-1">
             <h2>Latest Work</h2>
-            <p>selected progress in all fields!</p>
+            <p>Latest progress in all fields!</p>
           </div>
-        </div>
+		</div>
         <div class="row">
           <div class="col-md-6 col-12 text-center">
             <img class="img-fluid" src="images/400x400.gif" alt="">
@@ -156,10 +161,10 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div class="col-12 text-center offset-xl-1">
             <h1>Lorem ipsum dolor sit amet</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, magni, doloribus, possimus eum sapiente deleniti doloremque fugit ut expedita molestiae iusto debitis eveniet modi obcaecati ipsam quos quis labore dicta.</p>
-            <button type="button" class="btn btn-success">Get in touch</button>
+            <!--<button type="button" class="btn btn-success">Get in touch</button>-->
           </div>
         </div>
       </div>
@@ -169,8 +174,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-12 col-xl-3">
-            <h3 class="text-center">WHO WE ARE</h3>
-            <p>Lorem ipsum dolor sit ame possimus consectetur dolores nihil labore quas eius illo accusamus nulla sed blanditiis porro accusantium. Perspiciatis, perferendis!</p>
+            <h3 class="text-center">ABOUT ME</h3>
+            <p><img src="I11.jpg" width="250"><hr><center>生活没有你想象的那么好<br/>也没有你想象的那么糟</center></p>
           </div>
           <div class="col-md-4 col-12 col-xl-6">
             <h3 class="text-center">GET IN TOUCH</h3>
@@ -178,17 +183,24 @@
               <strong>State Key laboratory of Clean Energy Utilization<br/>Institute for Thermal Power Engineering<br/>College of Energy Engineering<br/><br/>Zhejiang University</strong><br>
               38 Zheda Road, Hangzhou, Zhejiang Province 310027, China<br>
               <br>
-              <abbr title="Phone">E-mail:</abbr> yingchongyan@zju.edu.cn
+              <abbr title="Phone">E-mail:</abbr> yingchongyan@zju.edu.cn<br/>
+			  <abbr title="Phone">Tel:</abbr> +86 18069865186
             </address>
           </div>
           <div class="col-md-4 col-12 col-xl-3">
-            <h3 class="text-center">NEWSLETTER</h3>
-            <form>
-              <div class="form-group col-12">
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                <button type="submit" class="btn btn-dark mt-2">Subscribe</button>
+            <h3 class="text-center">LEAVE MESSAGE</h3>
+            <!--<form>-->
+              <div class="form-group col-12 col-xl-11"> </div>
+              <div class="form-group col-12 col-xl-11">
+                <form name="发送留言" method="post" action="mailto:yingchongyan@zju.edu.cn">
+				  <input type="text" name="whatyouwannasay" class="form-control" placeholder=". . ."><br/>
+				  <input type="text" name="howcanicall" class="form-control" placeholder="Contact:E-mail/Tel ">
+				  <input type="submit" class="btn btn-dark mt-2" value="Send" />
+                  <!--<button type="submit" value = "Send email" class="btn btn-dark mt-2" >Send</button>-->
+					
+				</form>
               </div>
-            </form>
+            <!--</form>-->
           </div>
         </div>
       </div>
@@ -197,7 +209,7 @@
     <footer class="text-center">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 offset-xl-1">
             <p>Copyright. All rights reserved.</p>
           </div>
         </div>
