--- a/index-CV.html
+++ b/index-CV.html
@@ -820,18 +820,18 @@ input {
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link" href="index-CV.html" target="_blank">Curriculum Vitae</a>
+            <a class="nav-link" href="index-CV.html">Curriculum Vitae</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Research
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Electrochemistry</a>
+              <a class="dropdown-item" href="index-e.html">Electrochemistry</a>
 			  <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Plasma</a>
+              <a class="dropdown-item" href="index-p.html">Plasma</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Thermal management</a>
+              <a class="dropdown-item" href="index-t.html">Thermal management</a>
             </div>
           </li>
 		  <li class="nav-item">
@@ -848,10 +848,11 @@ input {
         </form>
       </div>
     </nav>
-    <section> </section>
+    
   <section>
       <!--<div class="container">-->
-        <div id='write' class="col-12 offset-xl-1"><p><center><img src="images\资源 3@4x.png" alt="资源 3@4x" style="zoom:6%;" /></center></p><p>&nbsp;</p>
+        <div id='write' class="col-12 offset-xl-1"><p><center><img src="images\资源 3@4x.png" alt="资源 3@4x" style="zoom:6%;" /></center></p>
+			<p style="text-align: right"><span><a href="简历2021.7.pdf">下载简历（2021.7）</a></span></p>
 	<h2 id='应崇彦'>
 		<span>应崇彦</span>
 	</h2>
@@ -866,21 +867,22 @@ input {
 	<h4 id='201709-202206--浙江大学----工学博士'>
 		<span>2017.09-2022.06  浙江大学    工学博士</span>
 	</h4>
-	<p><span>工程热物理（能源清洁利用国家重点实验室）</span></p>
-	<ul><li><span>主修课程：试验数据处理和分析，人工智能，高等传热学，高等流体力学，能源材料科学等</span></li><li><span>获奖：浙江大学优秀研究生（两次），岑可法教育奖学金（两次），浙江大学优秀团员，优秀博士生岗位助学金，社会实践先进基地、优秀论文。</span></li></ul>
+	<p>工程热物理（能源清洁利用国家重点实验室）</p>
+	<ul><li>主修课程：试验数据处理和分析，人工智能，高等传热学，高等流体力学，能源材料科学等</li></ul>
+	<ul><li>获奖：浙江大学优秀研究生（两次），岑可法教育奖学金（两次），浙江大学优秀团员，优秀博士生岗位助学金，社会实践先进基地、优秀论文。</li></ul>
 	<h4 id='201309-201706--东北大学----工学学士'>
 		<span>2013.09-2017.06  东北大学    工学学士</span></h4>
-	<p><span>能源与动力工程（GPA专业前5%）</span></p>
-	<ul><li><span>主修课程：热力学，流体力学，传热学，电工电子，数值计算及应用，自动控制原理、C语言等</span></li></ul>
-	<ul><li><span>获奖：东北大学优秀学生（两次），优秀学业奖学金（五次）西北有色金属研究院奖学金，凤凰教育奖学金，东北大学优秀学生标兵</span></li></ul>
+	<p>能源与动力工程（GPA专业前5%）</p>
+	<ul><li>主修课程：热力学，流体力学，传热学，电工电子，数值计算及应用，自动控制原理、C语言等</li></ul>
+	<ul><li>获奖：东北大学优秀学生（两次），优秀学业奖学金（五次）西北有色金属研究院奖学金，凤凰教育奖学金，东北大学优秀学生标兵</li></ul>
 	<hr />
 	<h2 id='主要研究课题内容'><span>主要研究课题内容</span></h2>
 	<h4 id='电化学储能'><span style="font-style: normal">电化学储能</span></h4>
-	<p><span>超级电容，离子电容，电化学测试与分析，电极材料特性与制备，设备单体制作（纽扣、软包、圆柱），电极界面能质传递、产热研究，负责国家自然科学基金面上项目研究，达到国际领先水平，准备与行业首席科学家合作。</span></p>
+	<ul><li><p>超级电容，离子电容，电化学测试与分析，电极材料特性与制备，设备单体制作（纽扣、软包、圆柱），电极界面能质传递、产热研究，负责国家自然科学基金面上项目研究，达到国际领先水平，准备与行业首席科学家合作。</p></li></ul>
 	<h4 id='等离子材料制备'><span style="font-style: normal">等离子材料制备</span></h4>
-	<p><span>等离子体增强CVD法制备石墨烯（参与发表SCI论文3篇），电感耦合、微波等离子体大小型设备，等离子体表面处理，等离子体有限元模拟。</span></p>
+	<ul><li><p>等离子体增强CVD法制备石墨烯（参与发表SCI论文3篇），电感耦合、微波等离子体大小型设备，等离子体表面处理，等离子体有限元模拟。</p></li></ul>
 	<h4 id='热管理'><span style="font-style: normal">热管理</span></h4>
-	<p><span>有限元模拟（COMSOL，FLUENT），热界面材料，辐射冷却薄膜，界面传热，电极表面产热，热物性测试。</span></p>
+	<ul><li><p>有限元模拟（COMSOL，FLUENT），热界面材料，辐射冷却薄膜，界面传热，电极表面产热，热物性测试。</p></li></ul>
 	<hr />
 	<h2 id='已发表sci论文'><span>已发表SCI论文</span></h2>
 	<p><span>本人第一作者或导师第一作者本人第二作者发表SCI论文2篇，在投1篇：</span></p>
@@ -896,14 +898,13 @@ input {
 	<p><strong><span>浙江大学杭州国际科创中心储能中心平台建设（2021.05 – ）：</span></strong><span>参与立项与初期建设，编写立项申请书，启动区块规划，设备购买。</span></p>
 	<p><strong><span>广东省肇庆市发改局能源科（2019.07 – 2019.08）：</span></strong><span>参与统计十三五 能源使用情况和编写十四五 新能源发展规划，调研发展新型能源和LNG可能性。</span></p>
 	<hr /><h2 id='其他'><span>其他</span></h2>
-	<p><strong><span>数据分析和绘图：</span></strong><span>Origin, python(NumPy, Matplotlib), Office, Solidworks, Auto CAD, Photoshop</span></p>
+	<p><strong><span>数据分析和绘图：</span></strong><span style="font-family: Constantia, 'Lucida Bright', 'DejaVu Serif', Georgia, serif">Origin, python(NumPy, Matplotlib), Office, Solidworks, Auto CAD, Photoshop</span></p>
 	<p><strong><span>英语：</span></strong><span>六级（528）</span></p>
 	<p><strong><span>其他技能：</span></strong><span>视频制作，机器学习，Linux，C语言</span></p>
 	</div>
-		
-      
-    </section>
-
+  </section>	
+	  <section><div></br></br></br></br></br></br></div>
+	  </section>
 	  <footer class="text-center">
       <div class="container">
         <div class="row">
