--- a/index-oth.html
+++ b/index-oth.html
@@ -58,26 +58,13 @@
         </form>
       </div>
   </nav>
-    <section>
-      <div class="jumbotron text-center mt-2">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 offset-xl-1">
-              <h1>XXXXX标题</h1>
-              <p><strong>Latest progress in MXene based pseudocapacitor in organic electrolyte</strong><br/>
-              Incredible performance & unpredictable mechanism<br/></p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <section> </section>
     <section>
       <div class="container">
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
-            <h1>Ph.D. Main Research Topics</h1>
-            <p>For some reasons, three main topics are under research during this period, including electrochemistry, low temperature plasma, interfacial heat transfer in thermal management.</p>
+            <h2>Something Valuable</h2>
+            <p>Those irrelevant to laboratory research.</p>
           </div>
         </div>
       </div>
@@ -85,52 +72,16 @@
     <section>
       <div class="container mt-2">
         <div class="row">
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img src="ele.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3 rounded">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">Electrochemistry</h5>
-                  Supercapacitor, pseudocapacitor, hybrid capacitor, electrochemical analyze and electrode optimize.
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img src="plasma.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">Plasma</h5>
-                  Low temperature plasma, micro-wave plasma, induced couple plasma and plasma enhanced CVD.
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 col-12">
-            <ul class="list-unstyled">
-              <li class="media">
-                <img src="Flow.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
-                <div class="media-body">
-                  <h5 class="mt-0 mb-1">Thermal management</h5>
-                  Interfacial heat transfer, finite element model, thermophysical test, thermal interfacial materials.
-                </div>
-              </li>
-            </ul>
-          </div>
+          <div class="col-md-4 col-12"> </div>
+          <div class="col-md-4 col-12"> </div>
+          <div class="col-md-4 col-12"> </div>
         </div>
       </div>
     </section>
     <section>
       <div class="container">
-        <div class="row">
-          <div class="col-12 text-center offset-xl-1">
-            <h2>Latest Work</h2>
-            <p>Latest progress in all fields!</p>
-          </div>
-		</div>
-        <div class="row">
-          <div class="col-md-6 col-12 text-center">
+<div class="row">
+      <div class="col-md-6 col-12 text-center"> 
             <img class="img-fluid" src="images/400x400.gif" alt="">
             <h4>Lorem ipsum dolor sit amet, consectetur elit</h4>
             <h6>Lorem ipsum dolor sit amet, consectetur elit</h6>
