--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>-->
           <li class="nav-item">
-            <a class="nav-link" href="index-CV.html" target="_blank">Curriculum Vitae</a>
+            <a class="nav-link" href="index-CV.html">Curriculum Vitae</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -162,8 +162,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
-            <h1>Lorem ipsum dolor sit amet</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, magni, doloribus, possimus eum sapiente deleniti doloremque fugit ut expedita molestiae iusto debitis eveniet modi obcaecati ipsam quos quis labore dicta.</p>
+            <h2>Thanks for your watching!</h2>
+            <p>Update at times. </p>
             <!--<button type="button" class="btn btn-success">Get in touch</button>-->
           </div>
         </div>
