--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
             <h2>Thanks for your watching!</h2>
-            <p>Update at times. </p>
+            <p class="text-center">Update at times. </p>
             <!--<button type="button" class="btn btn-success">Get in touch</button>-->
           </div>
         </div>
@@ -180,7 +180,7 @@
           <div class="col-md-4 col-12 col-xl-6">
             <h3 class="text-center">GET IN TOUCH</h3>
             <address class="text-center">
-              <strong>State Key laboratory of Clean Energy Utilization<br/>Institute for Thermal Power Engineering<br/>College of Energy Engineering<br/><br/>Zhejiang University</strong><br>
+            <strong>State Key laboratory of Clean Energy Utilization<br/>Institute for Thermal Power Engineering<br/>College of Energy Engineering<br/><br/>Zhejiang University</strong><br>
               38 Zheda Road, Hangzhou, Zhejiang Province 310027, China<br>
               <br>
               <abbr title="Phone">E-mail:</abbr> yingchongyan@zju.edu.cn<br/>
@@ -210,7 +210,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 offset-xl-1">
-            <p>Copyright. All rights reserved.</p>
+            <p><center>Copyright. All rights reserved.</center></p>
           </div>
         </div>
       </div>
