--- a/index-CV.html
+++ b/index-CV.html
@@ -835,7 +835,7 @@ input {
             </div>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="#">Others</a>
+            <a class="nav-link" href="index-oth.html">Others</a>
           </li>
           <!--
 		  <li class="nav-item">
