--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="#">Others</a>
+            <a class="nav-link" href="index-oth.html">Others</a>
           </li>
           <!--
 		  <li class="nav-item">
@@ -65,9 +65,9 @@
           <div class="row">
             <div class="col-12 offset-xl-1">
               <h1>XXXXX标题</h1>
-              <p><strong>Latest progress in MXene based pseudocapacitor in organic electrolyte</strong><br/>
-              Incredible performance & unpredictable mechanism<br/></p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">More »</a></p>
+              <p><center><strong>Latest progress in MXene based pseudocapacitor in organic electrolyte</strong><br/>
+              Incredible performance & unpredictable mechanism<br/><center></p>
+              <p><center><a class="btn btn-primary btn-lg" href="#" role="button">More »</a></center></p>
             </div>
           </div>
         </div>
