--- a/index.html
+++ b/index.html
@@ -59,15 +59,17 @@
       </div>
   </nav>
     <section>
-      <div class="jumbotron text-center mt-2">
+      <div class="jumbotron1 text-center mt-2">
 		<!--<img src="images/bck1.png" width="110%">-->  
         <div class="container">
           <div class="row">
-            <div class="col-12 offset-xl-1">
-              <h1>XXXXX标题</h1>
+            <div class="col-12-1 offset-xl-1">
+			
+              <h1>Comparable with Battery in Energy Density</h1>
+			  <h1> </h1>
               <p><center><strong>Latest progress in MXene based pseudocapacitor in organic electrolyte</strong><br/>
               Incredible performance & unpredictable mechanism<br/><center></p>
-              <p><center><a class="btn btn-primary btn-lg" href="#" role="button">More »</a></center></p>
+              <p><center><a class="btn btn-primary btn-lg" href="index-e.html" role="button">More »</a></center></p>
             </div>
           </div>
         </div>
@@ -76,8 +78,8 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center offset-xl-1">
-            <h1>Ph.D. Main Research Topics</h1>
+          <div class="col-12-2 text-center offset-xl-1">
+            <h2>Ph.D. Main Research Topics</h2>
             <p>For some reasons, three main topics are under research during this period, including electrochemistry, low temperature plasma, interfacial heat transfer in thermal management.</p>
           </div>
         </div>
@@ -91,7 +93,7 @@
               <li class="media">
                 <img src="ele.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3 rounded">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Electrochemistry</h5>
+                  <h4 class="mt-0 mb-1">Electrochemistry</h4>
                   Supercapacitor, pseudocapacitor, hybrid capacitor, electrochemical analyze and electrode optimize.
                 </div>
               </li>
@@ -102,7 +104,7 @@
               <li class="media">
                 <img src="plasma.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Plasma</h5>
+                  <h4 class="mt-0 mb-1">Plasma</h4>
                   Low temperature plasma, and plasma enhanced CVD.
                 </div>
               </li>
@@ -113,7 +115,7 @@
               <li class="media">
                 <img src="Flow.jpg" alt="Generic placeholder image" width="50" height="50" class="mr-3">
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Thermal management</h5>
+                  <h4 class="mt-0 mb-1">Thermal management</h4>
                   Interfacial heat transfer, finite element model, thermophysical test, thermal interfacial materials.
                 </div>
               </li>
@@ -127,33 +129,35 @@
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
             <h2>Latest Work</h2>
-            <p>Latest progress in all fields!</p>
+            <p><center style="font-size: 1.4rem">Latest progress in all fields!</center></p>
           </div>
 		</div>
         <div class="row">
           <div class="col-md-6 col-12 text-center">
-            <img class="img-fluid" src="images/400x400.gif" alt="">
-            <h4>Lorem ipsum dolor sit amet, consectetur elit</h4>
-            <h6>Lorem ipsum dolor sit amet, consectetur elit</h6>
+            <img class="img-fluid" src="images/yanglizi.png" alt="" height="400">
+            <h4>MXene with addictive</h4>
+            <h6>Super High Capacitance</h6>
           </div>
           <div class="col-md-6 col-12 text-center mt-md-0 mt-2">
-            <img class="img-fluid" src="images/400x400.gif" alt="">
-            <h4>Lorem ipsum dolor sit amet, consectetur elit</h4>
-            <h6>Lorem ipsum dolor sit amet, consectetur elit</h6>
+            <img class="img-fluid" src="images/plasmafunny.png" alt="" height="400">
+            <h4>Micro-plasma in Ethanol from Univ. Ulster</h4>
+            <h6>Funny Plasma Processing</h6>
           </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-md-3 col-6"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+        </div><hr>
+        <div class="row mt-2"><center>
+          <div class="col-12">
+			  <br><img class="img-fluid float-right" src="images/li.png" width="1200">
+			  <h4><center>Plasma-Liquid Method</center></h4></div></center>
+          <!--<div class="col-md-3 col-12"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+          <div class="col-md-3 col-12 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
+          <div class="col-md-3 col-12 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>-->
         </div>
         <hr>
         <div class="row">
-          <div class="col-md-3 col-6"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
+          <div class="col-md-3 col-6"><img class="img-fluid float-right" src="images/images.png" alt="" width="240" height="240" ></div>
+          <div class="col-md-3 col-6"><img class="img-fluid float-left" src="images/fingraphene.png" alt="" width="240" height="240"></div>
+          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/fushe.png" width="240" height="240"></div>
+          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/nano.png" width="240" height="240"></div>
         </div>
       </div>
     </section>
