--- a/index-CV.html
+++ b/index-CV.html
@@ -852,7 +852,7 @@ input {
   <section>
       <!--<div class="container">-->
         <div id='write' class="col-12 offset-xl-1"><p><center><span><img src="images\资源 3@4x.png" alt="资源 3@4x" height="250" max-width="250"/></span></center></p>
-			<p style="text-align: right"><span><a href="简历2021.7.pdf">下载简历（2021.7）</a></span></p>
+			<p style="text-align: right"><span><a href="CV202109.pdf">下载简历（2021.09）</a></span></p>
 	<h2 id='应崇彦'>
 		<span>应崇彦</span>
 	</h2>
