--- a/index-e.html
+++ b/index-e.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 	<title>Chongyan's Page</title>
     <!-- Bootstrap -->
-    <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
+    <link href="css/bootstrap-4.0.e.css" rel="stylesheet">
 	<!-- <link rel="shortcut icon" href="myname22.ico" />
 	     <link rel="icon" href="myname22.ico" type="image/x-icon">
 	     <link rel="shortcut icon" href="myname22.ico" type="image/x-icon"> -->
@@ -37,11 +37,11 @@
             Research
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Electrochemistry</a>
+              <a class="dropdown-item" href="index-e.html">Electrochemistry</a>
 			  <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Plasma</a>
+              <a class="dropdown-item" href="index-p.html">Plasma</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Thermal management</a>
+              <a class="dropdown-item" href="index-t.html">Thermal management</a>
             </div>
           </li>
 		  <li class="nav-item">
@@ -59,7 +59,7 @@
       </div>
   </nav>
     <section>
-      <div class="jumbotron text-center mt-2">
+      <!--<div class="jumbotron text-center mt-2">
         <div class="container">
           <div class="row">
             <div class="col-12 offset-xl-1">
@@ -70,13 +70,13 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
     </section>
     <section>
       <div class="container">
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
-            <h1>Ph.D. Main Research Topics</h1>
+            <h1>本页不开发了</h1>
             <p>For some reasons, three main topics are under research during this period, including electrochemistry, low temperature plasma, interfacial heat transfer in thermal management.</p>
           </div>
         </div>
