--- a/index.html
+++ b/index.html
@@ -147,17 +147,17 @@
         <div class="row mt-2"><center>
           <div class="col-12">
 			  <br><img class="img-fluid float-right" src="images/li.png" width="1200">
-			  <h4><center>Plasma-Liquid Method</center></h4></div></center>
+			  <h4><center>Plasma-Liquid Method in Material Surface Treatment</center></h4></div></center>
           <!--<div class="col-md-3 col-12"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>
           <div class="col-md-3 col-12 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/200x200.gif" alt=""></div>
           <div class="col-md-3 col-12 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/200x200.gif" alt=""></div>-->
         </div>
         <hr>
         <div class="row">
-          <div class="col-md-3 col-6"><img class="img-fluid float-right" src="images/images.png" alt="" width="240" height="240" ></div>
-          <div class="col-md-3 col-6"><img class="img-fluid float-left" src="images/fingraphene.png" alt="" width="240" height="240"></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/fushe.png" width="240" height="240"></div>
-          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/nano.png" width="240" height="240"></div>
+          <div class="col-md-3 col-6"><img class="img-fluid float-right" src="images/images.png" alt="" width="240" height="240" ><h4><center>Heat dissipation</center></h4></div>
+          <div class="col-md-3 col-6"><img class="img-fluid float-left" src="images/fingraphene.png" alt="" width="240" height="240"><h4><center>Finite element model</center></h4></div>
+          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-right" src="images/fushe.png" width="240" height="240"><h4><center>Radiant cooling</center></h4></div>
+          <div class="col-md-3 col-6 mt-md-0 mt-1"><img class="img-fluid float-left" src="images/nano.png" width="240" height="240"><h4><center>Nanofluid</center></h4></div>
         </div>
       </div>
     </section>
