--- a/index-oth.html
+++ b/index-oth.html
@@ -58,7 +58,7 @@
         </form>
       </div>
   </nav>
-    <section> </section>
+    <section></br></section>
     <section>
       <div class="container">
         <div class="row">
@@ -67,18 +67,18 @@
             <p class="text-center">Those irrelevant to laboratory research.</p>
           </div>
         </div>
-      </div><div></br></br></br></br></br></br></div>
+      </div><div></br></br></br></div>
     </section>
-    <section>
-      <div class="container mt-2">
+    <!--<section>
+      <!--<div class="container mt-2">
         <div class="row">
           <div class="col-md-4 col-12"> </div>
           <div class="col-md-4 col-12"> </div>
           <div class="col-md-4 col-12"> </div>
         </div>
-      </div>
+      </div>-->
     </section>
-    <section>
+    <!--<section>
       <div class="container">
 <div class="row">
       <div class="col-md-6 col-12 text-center"> 
@@ -101,10 +101,10 @@
         
         <hr>
        </div>
-    </section>
+    </section>-->
     <hr>
     <section>
-      <div class="container">
+      <!--<div class="container">
         <div class="row">
           <div class="col-12 text-center offset-xl-1">
             <h1>Lorem ipsum dolor sit amet</h1>
@@ -113,7 +113,7 @@
 			</div>
         </div>
       </div>
-      <div class="container"><div></br></br></br></br></br></br></div>
+      <div class="container">
         <div class="row">
           
 		<div class="col-12 text-center offset-xl-1"><hr /><!--增加分割横线-->  
